# ManGER

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cloud  Dockerfile.gpu  README.md  app.py  beam_app.py  concept.md  ideen_ocr.txt  modal_app.py  pod-ed538290.py  pyproject.toml  start_cloud.sh
.streamlit/: config.toml
pages/: Tools.py  WebManga.py
src/manger/: __init__.py  config.py  pipeline.py
src/manger/domain/: __init__.py  models.py
src/manger/services/: __init__.py  archive.py  epub.py  ocr.py  pdf.py  renderer.py  translator.py
